allowing specific dates option in event response
