# docs/swagger.json
@@ -243,7 +243,7 @@
                     "200": {
                         "description": "Payment link generated successfully",
                         "schema": {
-                            "$ref": "#/definitions/purchase.CheckoutResponseDto"
+                          "$ref": "#/definitions/payment.CheckoutResponseDto"
                         }
                     },
                     "400": {
@@ -292,7 +292,7 @@
                     "200": {
                         "description": "Payment link generated successfully",
                         "schema": {
-                            "$ref": "#/definitions/purchase.CheckoutResponseDto"
+                          "$ref": "#/definitions/payment.CheckoutResponseDto"
                         }
                     },
                     "400": {
@@ -549,6 +549,12 @@
                 "summary": "Get events",
                 "parameters": [
                     {
+                      "type": "string",
+                      "description": "Choose between 'date' and 'day'. Response type for the schedule, in specific dates or recurring day information. Default is 'day'.",
+                      "name": "view",
+                      "in": "query"
+                    },
+                  {
                         "type": "string",
                         "example": "\"2025-03-01\"",
                         "description": "Start date of the events range (YYYY-MM-DD)",
@@ -596,7 +602,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/event.ResponseDto"
+                              "$ref": "#/definitions/event.ResponseDtoEventWithoutPeople"
                             }
                         }
                     },
@@ -896,13 +902,19 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                  {
+                    "type": "string",
+                    "description": "Choose between 'date' and 'day'. Response type for the schedule, in specific dates or recurring day information. Default is 'day'.",
+                    "name": "view",
+                    "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "Event details retrieved successfully",
                         "schema": {
-                            "$ref": "#/definitions/event.ResponseDto"
+                          "$ref": "#/definitions/event.ResponseDtoEventWithPeople"
                         }
                     },
                     "400": {
@@ -3569,6 +3581,37 @@
                 }
             }
         },
+      "event.DateResponseDto": {
+        "type": "object",
+        "properties": {
+          "end_at": {
+            "type": "string"
+          },
+          "start_at": {
+            "type": "string"
+          }
+        }
+      },
+      "event.DayResponseDto": {
+        "type": "object",
+        "properties": {
+          "day": {
+            "type": "string"
+          },
+          "program_end_at": {
+            "type": "string"
+          },
+          "program_start_at": {
+            "type": "string"
+          },
+          "session_end_at": {
+            "type": "string"
+          },
+          "session_start_at": {
+            "type": "string"
+          }
+        }
+      },
         "event.RequestDto": {
             "type": "object",
             "required": [
@@ -3613,7 +3656,7 @@
                 }
             }
         },
-        "event.ResponseDto": {
+      "event.ResponseDtoEventWithPeople": {
             "type": "object",
             "properties": {
                 "capacity": {
@@ -3625,6 +3668,12 @@
                         "$ref": "#/definitions/event.CustomerResponseDto"
                     }
                 },
+              "dates": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/event.DateResponseDto"
+                }
+              },
                 "day": {
                     "type": "string"
                 },
@@ -3669,6 +3718,47 @@
                 }
             }
         },
+      "event.ResponseDtoEventWithoutPeople": {
+        "type": "object",
+        "properties": {
+          "capacity": {
+            "type": "integer"
+          },
+          "id": {
+            "type": "string"
+          },
+          "location_address": {
+            "type": "string"
+          },
+          "location_id": {
+            "type": "string"
+          },
+          "location_name": {
+            "type": "string"
+          },
+          "program_id": {
+            "type": "string"
+          },
+          "program_name": {
+            "type": "string"
+          },
+          "program_type": {
+            "type": "string"
+          },
+          "schedule_dates": {
+            "type": "array",
+            "items": {
+              "$ref": "#/definitions/event.DateResponseDto"
+            }
+          },
+          "schedule_days": {
+            "type": "array",
+            "items": {
+              "$ref": "#/definitions/event.DayResponseDto"
+            }
+          }
+        }
+      },
         "event.StaffResponseDto": {
             "type": "object",
             "properties": {
@@ -4022,6 +4112,14 @@
                 }
             }
         },
+      "payment.CheckoutResponseDto": {
+        "type": "object",
+        "properties": {
+          "payment_url": {
+            "type": "string"
+          }
+        }
+      },
         "program.LevelsResponse": {
             "type": "object",
             "properties": {
@@ -4077,14 +4175,6 @@
                     "type": "string"
                 },
                 "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "purchase.CheckoutResponseDto": {
-            "type": "object",
-            "properties": {
-                "payment_url": {
                     "type": "string"
                 }
             }
